--- a/.github/workflows/auth.yml
+++ b/.github/workflows/auth.yml
@@ -1,4 +1,4 @@
-name: deploy-container
+name: deploy-auth
 
 on:
   push:
@@ -7,11 +7,11 @@ on:
       - main
       - dev
     paths:
-      - 'container/**'
+      - 'auth/**'
 
 defaults:
   run:
-    working-directory: container
+    working-directory: auth
 
 jobs:
   build:
@@ -23,7 +23,7 @@ jobs:
       - run: npm run build
 
       - uses: shinyinc/action-aws-cli@v1.2
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/auth/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
